--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
-    <a href="/" class="absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
+    <a href="/" class="font-semibold absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
     <div class="flex flex-1">
         <div class="flex items-center justify-center w-1/2">
             <img src="/images/cinemabg.png" alt="Image" class="object-cover w-full h-auto">
