--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -1,151 +1,140 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Movie List</title>
-    <style>
-      .popup {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 2rem;
-        background-color: white;
-        border-radius: 0.5rem;
-        z-index: 9999;
-      }
-    </style>
-    <script>
-      function showPopup() {
-        var popup = document.getElementById("popup");
-        popup.style.display = "block";
-      }
-    </script>
-        <meta charset="UTF-8">
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="/styles/fe_style.css">
-        <link rel="stylesheet" href="/styles/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-      <!-- Navbar -->
-      <nav class="p-10 bg-black text-cfab7a">
-        <div class="container flex items-center justify-between mx-auto">
-            <a href="#" class="text-3xl font-semibold">TixOnline</a>
-            <div class="text-[#cfab7a]">
-                <a href="/home" class="px-4 hover:text-white">Home</a>
-                <a href="#nowplaying" class="px-4 hover:text-white">Now Playing</a>
-                <a href="#comingsoon" class="px-4 hover:text-white">Coming Soon</a>
-                <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
-                <a href="#about" class="px-4 hover:text-white">About</a>
-            </div>
-    
-        </div>
-    </nav>
 
-    <section id="movieList" class="bg-black py-16 text-[#cfab7a]">
-      <div class="container mx-auto">
-          <div class="kodfun-galeri">
-              <% movies.forEach(movie => {  %>
-                  <div style="background-image: url('/images/<%= movie.images %>');">
-                      <div class="overlay">
-                          <a href="/schedules/<%= movie.movie_id %>" class="font-semibold "><%= movie.title %></a>
-                      </div>
-                  </div>
-                <% }) %>
-          </div>
+<head>
+  <title>Movie List</title>
+  <style>
+    .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 2rem;
+      background-color: white;
+      border-radius: 0.5rem;
+      z-index: 9999;
+    }
+  </style>
+  <script>
+    function showPopup() {
+      var popup = document.getElementById("popup");
+      popup.style.display = "block";
+    }
+  </script>
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/fe_style.css">
+  <link rel="stylesheet" href="/styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="p-10 bg-black text-cfab7a">
+    <div class="container flex items-center justify-between mx-auto">
+      <a href="#" class="text-3xl font-semibold">TixOnline</a>
+      <div class="text-[#cfab7a]">
+        <a href="/home" class="px-4 hover:text-white">Home</a>
+        <a href="#nowplaying" class="px-4 hover:text-white">Now Playing</a>
+        <a href="#comingsoon" class="px-4 hover:text-white">Coming Soon</a>
+        <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
+        <a href="#about" class="px-4 hover:text-white">About</a>
       </div>
-    </section>
+    </div>
+  </nav>
 
-    <section id="movieDetail" class="bg-black py-16 text-[#cfab7a] ">
-   
-          <h1 class="mb-16 text-4xl font-semibold flex justify-center"><%= movie.title %></h1>
-            <!--Movie Selected Info-->
-            <div class="flex justify-center">
-              <iframe class="mb-4 flex justify-center" width="560" height="315" src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+  <section id="movieList" class="bg-black py-16 text-[#cfab7a]">
+    <div class="container mx-auto">
+      <div class="kodfun-galeri">
+        <% movies.forEach(movie=> { %>
+          <div style="background-image: url('/images/<%= movie.images %>');">
+            <div class="overlay">
+              <a href="/schedules/<%= movie.movie_id %>" class="font-semibold ">
+                <%= movie.title %>
+              </a>
             </div>
-      
-    </section>
+          </div>
+          <% }) %>
+      </div>
+    </div>
+  </section>
+  <section id="movieDetail" class="bg-black py-16 text-[#cfab7a] ">
+    <h1 class="flex justify-center mb-16 text-4xl font-semibold">
+      <%= movie.title %>
+    </h1>
+    <!--Movie Selected Info-->
+    <div class="flex justify-center">
+      <iframe class="flex justify-center mb-4" width="560" height="315"
+        src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+    </div>
+  </section>
 
-    <section id="filter" class="bg-black py-16 text-[#cfab7a] ">
-         <!--Filter-->
+  <section id="filter" class="bg-black py-16 text-[#cfab7a] ">
+    <!--Filter-->
     <form id="filterForm" action="/schedules/<%= movie.movie_id %>" method="GET">
       <select id="selectedCity" name="selectedCity" onchange="this.form.submit();">
-        <% cities.forEach((city) => { %>
-          <option value="<%= city.city %>" <% if(city.city == cityFilter){ %> selected <%}%>><%= city.city %></option>
-        <% }) %>
+        <% cities.forEach((city)=> { %>
+          <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
+          </option>
+          <% }) %>
       </select>
-      
-
       <select id="selectedDate" name="selectedDate" onchange="this.form.submit();">
-        <% dateSelector.forEach((date) => { %>
-          <option value="<%= date.date %>" <% if(date.date == dateFilter){ %> selected <%}%>><%= date.date %></option>
-        <% }) %>
+        <% dateSelector.forEach((date)=> { %>
+          <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
+          </option>
+          <% }) %>
       </select>
     </form>
-    </section>
-     
+  </section>
 
-    
-      <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
-   
-        <% if (schedules != null ) { %>
-          <% if (schedules.length > 0) { %>
-  
-            <h3>Schedules:</h3>
-  
-            <% let scheduleByLocation = {}; %>
-  
-            <% schedules.forEach(schedule => {
-                if (!scheduleByLocation[schedule.location]) {
-                  scheduleByLocation[schedule.location] = [];
-                }
-                scheduleByLocation[schedule.location].push(schedule);
+  <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
+    <% if (schedules !=null ) { %>
+      <% if (schedules.length> 0) { %>
+        <h3>Schedules:</h3>
+        <% let scheduleByLocation={}; %>
+          <% schedules.forEach(schedule=> {
+            if (!scheduleByLocation[schedule.location]) {
+            scheduleByLocation[schedule.location] = [];
+            }
+            scheduleByLocation[schedule.location].push(schedule);
             }); %>
-  
-            <% Object.keys(scheduleByLocation).forEach(location => { %>
-                <h2><%= location %></h2>
-                <ul>
-
-                  <% scheduleByLocation[location].forEach(schedule => { %>
-                    
-                    <% if(session != null) {%>
-                      <a href="/seat/<%= schedule.schedule_id %>" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded py-2 px-4">
-                        <%= schedule.hours %>
-                        <%= schedule.type %>
-                      </a>
-                    <% }else{ %>
-                    <a onclick="showPopup()" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded py-2 px-4">
+            <% Object.keys(scheduleByLocation).forEach(location=> { %>
+              <h2>
+                <%= location %>
+              </h2>
+              <ul>
+                <% scheduleByLocation[location].forEach(schedule=> { %>
+                  <% if(session !=null) {%>
+                    <a href="/seat/<%= schedule.schedule_id %>"
+                      class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
                       <%= schedule.hours %>
-                      <%= schedule.type %>
+                        <%= schedule.type %>
                     </a>
-                    <% }%>
-               
-
-                 
-                 
-                 
-                  <% }); %>
-
-                </ul>
+                    <% }else{ %>
+                      <a onclick="showPopup()"
+                        class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                        <%= schedule.hours %>
+                          <%= schedule.type %>
+                      </a>
+                      <% }%>
+                        <% }); %>
+              </ul>
               <% }); %>
-  
-              
-              
-  
-          <% } else { %>
-            <p>No schedules available for this movie.</p>
-          <% } %>
-        <% } %>
-    
+                <% } else { %>
+                  <p>No schedules available for this movie.</p>
+                  <% } %>
+                    <% } %>
   </section>
 
   <div id="popup" class="popup">
     <h2>This is a pop-up!</h2>
     <p>Please login first to buy ticket</p>
-    <button onclick="hidePopup()" class="mt-4 bg-red-500 hover:bg-red-600 text-white font-semibold rounded py-2 px-4">Close</button>
+    <button onclick="hidePopup()"
+      class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
   </div>
 
   <script>
@@ -154,7 +143,7 @@
       popup.style.display = "none";
     }
   </script>
-   
 
-    </body>
-  </html>
+</body>
+
+</html>
