--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -13,10 +13,23 @@
 </head>
 
 <body class="bg-black">
+  <!-- Navbar -->
+  <nav class="p-10 bg-black text-cfab7a">
+    <div class="container flex items-center justify-between mx-auto">
+      <a href="/" class="text-3xl font-semibold">TixOnline</a>
+      <div class="text-[#cfab7a]">
+        <a href="/" class="px-4 hover:text-white">Home</a>
+        <a href="/#nowplaying" class="px-4 hover:text-white">Now Playing</a>
+        <a href="/#comingsoon" class="px-4 hover:text-white">Coming Soon</a>
+        <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
+        <a href="/#about" class="px-4 hover:text-white">About</a>
+      </div>
+    </div>
+  </nav>
+
   <div class="flex items-center justify-center">
     <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Theaters List</h1>
   </div>
-
   <div class="grid grid-cols-1 gap-4 p-4 text-cfab7a sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     <% theaters.forEach(function(theater) { %>
       <a href="/theater/<%= theater.location %>"
@@ -37,7 +50,6 @@
           <span class="inline-block px-3 py-1 mr-2 text-sm font-semibold bg-gray-200 rounded-full">
             #<%= theater.location %>
           </span>
-          <!-- Add more tags if necessary -->
         </div>
       </a>
       <% }) %>
