--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -91,6 +91,7 @@
     </form>
   </section>
 
+  <%  const today = new Date(); today.setHours(today.getHours() + 0); today.setDate(today.getDate()+0);%>
   <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
     <% if (schedules !=null ) { %>
       <% if (schedules.length> 0) { %>
@@ -107,7 +108,12 @@
                 <%= location %>
               </h2>
               <ul>
+            
                 <% scheduleByLocation[location].forEach(schedule=> { %>
+                  <div   class="inline-block <%if(((new Date().getUTCHours() + 7) + ":" + new Date().getUTCMinutes()>schedule.hours) && (today.toLocaleDateString('en-GB') === schedule.date.toLocaleDateString('en-GB'))){%>
+                    pointer-events-none
+                    <% }%>
+                    ">
                   <% if(session !=null) {%>
                     <a href="/seat/<%= schedule.schedule_id %>"
                       class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
@@ -122,6 +128,8 @@
                       </a>
                       <% }%>
                         <% }); %>
+                      </div>
+
               </ul>
               <% }); %>
                 <% } else { %>
