--- a/views/admin-movies-edit.ejs
+++ b/views/admin-movies-edit.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Create Movie</title>
+  <title>Edit Movie</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -12,105 +12,111 @@
 </head>
 
 <body class="bg-black font-raleway text-cfab7a">
-  <a href="/" class="absolute top-0 right-0 m-4 text-4xl font-semibold hover:text-white">TixOnline</a>
-  <div class="flex flex-col items-center justify-center min-h-screen">
-    <h1 class="mb-6 text-3xl font-semibold">Edit Movie</h1>
-    <form action="/edit-movie/<%= movie.movie_id %>" method="POST" enctype="multipart/form-data"
-      class="w-full max-w-lg p-8 rounded-md custom-btn">
-      <div class="flex flex-wrap mb-6 -mx-3">
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="title">Title</label>
-          <input
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            type="text" id="title" name="title" required>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="genre">Genre</label>
-          <div class="relative">
-            <select
-              class="block w-full px-4 py-3 pr-8 leading-tight bg-white bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
-              id="genre" name="genre" required>
-              <option value="Action">Action</option>
-              <option value="Adventure">Adventure</option>
-              <option value="Comedy">Comedy</option>
-              <option value="Drama">Drama</option>
-              <option value="Fantasy">Fantasy</option>
-              <option value="Horror">Horror</option>
-              <option value="Mystery">Mystery</option>
-              <option value="Romance">Romance</option>
-              <option value="Sci-Fi">Sci-Fi</option>
-              <option value="Thriller">Thriller</option>
-              <option value="Other">Other</option>
-            </select>
-            <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
-              <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                <path d="M10 12l-6-6 1.414-1.414L10 9.172l4.586-4.586L16 6z" />
-              </svg>
+  <div class="absolute top-0 right-0 m-4">
+    <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
+  </div>
+  <div class="flex flex-col items-center justify-start h-screen pt-20">
+    <div>
+      <h1 class="mb-3 text-3xl font-semibold">Edit Movie</h1>
+      <form action="/edit-movie/<%= movie.movie_id %>" method="POST" enctype="multipart/form-data"
+        class="w-full max-w-lg p-8 rounded-md custom-btn">
+        <div class="flex flex-wrap mb-3 -mx-3">
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="title">Title</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="title" name="title" required>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="genre">Genre</label>
+            <div class="relative">
+              <select
+                class="block w-full px-4 py-3 pr-8 leading-tight bg-white bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
+                id="genre" name="genre" required>
+                <option value="Action">Action</option>
+                <option value="Adventure">Adventure</option>
+                <option value="Comedy">Comedy</option>
+                <option value="Drama">Drama</option>
+                <option value="Fantasy">Fantasy</option>
+                <option value="Horror">Horror</option>
+                <option value="Mystery">Mystery</option>
+                <option value="Romance">Romance</option>
+                <option value="Sci-Fi">Sci-Fi</option>
+                <option value="Thriller">Thriller</option>
+                <option value="Other">Other</option>
+              </select>
+              <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
+                <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M10 12l-6-6 1.414-1.414L10 9.172l4.586-4.586L16 6z" />
+                </svg>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="duration">Duration</label>
-          <input
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            type="text" id="duration" name="duration" required>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="release_date">Release
-            Date</label>
-          <input
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            type="text" id="release_date" name="release_date" required>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="synopsis">Synopsis</label>
-          <textarea
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            id="synopsis" name="synopsis" rows="4" cols="50" required></textarea>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="status">Status</label>
-          <div class="relative">
-            <select
-              class="block w-full px-4 py-3 pr-8 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
-              id="status" name="status" required>
-              <option value="UPCOMING">Upcoming</option>
-              <option value="SHOWING">Showing</option>
-              <option value="SHOWED">Showed</option>
-            </select>
-            <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
-              <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                <path d="M10 12l-6-6 1.414-1.414L10 9.172l4.586-4.586L16 6z" />
-              </svg>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase"
+              for="duration">Duration</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="duration" name="duration" required>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="release_date">Release
+              Date</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="release_date" name="release_date" required>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase"
+              for="synopsis">Synopsis</label>
+            <textarea
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              id="synopsis" name="synopsis" rows="4" cols="50" required></textarea>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="status">Status</label>
+            <div class="relative">
+              <select
+                class="block w-full px-4 py-3 pr-8 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
+                id="status" name="status" required>
+                <option value="UPCOMING">Upcoming</option>
+                <option value="SHOWING">Showing</option>
+                <option value="SHOWED">Showed</option>
+              </select>
+              <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
+                <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M10 12l-6-6 1.414-1.414L10 9.172l4.586-4.586L16 6z" />
+                </svg>
+              </div>
             </div>
           </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="rating">Rating</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="rating" name="rating" required>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="trailer_link">Trailer
+              Link</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="trailer_link" name="trailer_link" required>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="image">Image</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="file" id="image" name="image" accept="image/*" required>
+          </div>
+          <div class="w-full px-3 py-4 text-right">
+            <input
+              class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline"
+              type="submit" value="Submit">
+          </div>
         </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="rating">Rating</label>
-          <input
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            type="text" id="rating" name="rating" required>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="trailer_link">Trailer
-            Link</label>
-          <input
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            type="text" id="trailer_link" name="trailer_link" required>
-        </div>
-        <div class="w-full px-3 mb-6">
-          <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="image">Image</label>
-          <input
-            class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-            type="file" id="image" name="image" accept="image/*" required>
-        </div>
-        <div class="w-full px-3 py-4 text-right">
-          <input
-            class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline"
-            type="submit" value="Submit">
-        </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </body>
 
