--- a/views/admin-movies-add.ejs
+++ b/views/admin-movies-add.ejs
@@ -22,10 +22,10 @@
         class="w-full max-w-lg p-8 rounded-md custom-btn">
         <div class="flex flex-wrap mb-3 -mx-3">
           <div class="w-full px-3 mb-3">
-            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="title">Title</label>
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="name">Title</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="text" id="title" name="title" required>
+              type="text" id="name" name="name" required>
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="genre">Genre</label>
