--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -37,10 +37,10 @@
           <a href="#" class="text-3xl font-semibold">TixOnline</a>
           <div class="text-[#cfab7a] mt-4 lg:mt-0">
               <a href="/" class="px-4 hover:text-white">Home</a>
-              <a href="#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
-              <a href="#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
+              <a href="/#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
+              <a href="/#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
               <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
-              <a href="#about" class="px-4 hover:text-white smooth-scroll">About</a>
+              <a href="/#about" class="px-4 hover:text-white smooth-scroll">About</a>
           </div>
           <div class="flex items-center mt-4 lg:mt-0">
               <% if (session && session.username) { %>
