--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -32,62 +32,61 @@
 </head>
 
 <body class="bg-black">
-     <!-- Navbar -->
-     <nav class="p-10 bg-black text-cfab7a">
-      <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
-          <a href="#" class="text-3xl font-semibold">TixOnline</a>
-          <div class="text-[#cfab7a] mt-4 lg:mt-0">
-              <a href="/" class="px-4 hover:text-white">Home</a>
-              <a href="#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
-              <a href="#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
-              <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
-              <a href="#about" class="px-4 hover:text-white smooth-scroll">About</a>
-          </div>
-          <div class="flex items-center mt-4 lg:mt-0">
-              <% if (session && session.username) { %>
-                  <a href="/profile" class="px-4 hover:text-white">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                          stroke="currentColor" class="w-6 h-6">
-                          <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
-                      </svg>
-                  </a>
-                  <% } else { %>
-                      <button id="registerBtn" class="w-auto px-3 py-1 mr-2 text-black rounded custom-btn hover:text-white"><a
-                              href="/register-account">Register</a></button>
-                      <button id="loginBtn" class="w-auto px-3 py-1 text-black rounded custom-btn hover:text-white"><a
-                              href="/login-account">Log in</a></button>
-                      <% } %>
-          </div>
+  <!-- Navbar -->
+  <nav class="p-10 bg-black text-cfab7a">
+    <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
+      <a href="#" class="text-3xl font-semibold">TixOnline</a>
+      <div class="text-[#cfab7a] mt-4 lg:mt-0">
+        <a href="/" class="px-4 hover:text-white">Home</a>
+        <a href="/#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
+        <a href="/#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
+        <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
+        <a href="/#about" class="px-4 hover:text-white smooth-scroll">About</a>
       </div>
+      <div class="flex items-center mt-4 lg:mt-0">
+        <% if (session && session.username) { %>
+          <a href="/profile" class="px-4 hover:text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+            </svg>
+          </a>
+          <% } else { %>
+            <button id="registerBtn" class="w-auto px-3 py-1 mr-2 text-black rounded custom-btn hover:text-white"><a
+                href="/register-account">Register</a></button>
+            <button id="loginBtn" class="w-auto px-3 py-1 text-black rounded custom-btn hover:text-white"><a
+                href="/login-account">Log in</a></button>
+            <% } %>
+      </div>
+    </div>
   </nav>
-       <!--Filter-->
-       <section id="filter" class="bg-black py-16 text-[#cfab7a] ">
-        <form id="filterForm" action="/schedules-theater/<%= theater.theater_id %>" method="GET">
-          <select id="selectedCity" name="selectedCity" onchange="this.form.submit();">
-            <% cities.forEach((city)=> { %>
-              <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
-              </option>
-              <% }) %>
-          </select>
-          <select id="selectedDate" name="selectedDate" onchange="this.form.submit();">
-            <% dateSelector.forEach((date)=> { %>
-              <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
-              </option>
-              <% }) %>
-          </select>
-        </form>
-      </section>
+  <!--Filter-->
+  <section id="filter" class="bg-black py-16 text-[#cfab7a] ">
+    <form id="filterForm" action="/schedules-theater/<%= theater.theater_id %>" method="GET">
+      <select id="selectedCity" name="selectedCity" onchange="this.form.submit();">
+        <% cities.forEach((city)=> { %>
+          <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
+          </option>
+          <% }) %>
+      </select>
+      <select id="selectedDate" name="selectedDate" onchange="this.form.submit();">
+        <% dateSelector.forEach((date)=> { %>
+          <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
+          </option>
+          <% }) %>
+      </select>
+    </form>
+  </section>
   <div class="flex items-center justify-center">
     <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Theaters List</h1>
   </div>
   <div class="grid grid-cols-1 gap-4 p-4 text-cfab7a sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-    
+
     <% theaters.forEach(function(theater) { %>
       <a href="/schedules-theater/<%= theater.theater_id %>?selectedCity=<%=cityFilter%>&selectedDate=<%=dateFilter%>"
         class="max-w-sm overflow-hidden transition-all duration-200 transform bg-gray-800 rounded shadow-lg hover:scale-105">
-        <img class="object-cover w-full h-64" src='/images/<%= theater.theater_images %> '
-          alt="<%= theater.city %>">
+        <img class="object-cover w-full h-64" src='/images/<%= theater.theater_images %> ' alt="<%= theater.city %>">
         <div class="px-6 py-4">
           <div class="mb-2 text-xl font-bold">
             <%= theater.name %>
@@ -112,69 +111,71 @@
       <%= theater.name %>
     </h1>
     <!--Movie Selected Info-->
- 
+
   </section>
-  
-  <%  const today = new Date(); today.setHours(today.getHours() + 0); today.setDate(today.getDate()+0);%>
-  <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
-    <% if (schedules !=null ) { %>
-      <% if (schedules.length> 0) { %>
-        <h3>Schedules:</h3>
-        <% let scheduleByLocation={}; %>
-          <% schedules.forEach(schedule=> {
-            if (!scheduleByLocation[schedule.title]) {
-            scheduleByLocation[schedule.title] = [];
-            }
-            scheduleByLocation[schedule.title].push(schedule);
-            }); %>
-            <% Object.keys(scheduleByLocation).forEach(title=> { %>
-              <h2>
-                <%= title %>
-              </h2>
-              <ul>
-            
-                <% scheduleByLocation[title].forEach(schedule=> { %>
-                  <div   class="inline-block <%if(((new Date().getUTCHours() + 7) + ":" + new Date().getUTCMinutes()>schedule.hours) && (today.toLocaleDateString('en-GB') === schedule.date.toLocaleDateString('en-GB'))){%>
-                    pointer-events-none
-                    <% }%>
-                    ">
-                  <% if(session !=null) {%>
-                    <a href="/seat/<%= schedule.schedule_id %>"
-                      class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
-                      <%= schedule.hours %>
-                        <%= schedule.type %>
-                    </a>
-                    <% }else{ %>
-                      <a onclick="showPopup()"
-                        class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
-                        <%= schedule.hours %>
-                          <%= schedule.type %>
-                      </a>
+
+  <% const today=new Date(); today.setHours(today.getHours() + 0); today.setDate(today.getDate()+0);%>
+    <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
+      <% if (schedules !=null ) { %>
+        <% if (schedules.length> 0) { %>
+          <h3>Schedules:</h3>
+          <% let scheduleByLocation={}; %>
+            <% schedules.forEach(schedule=> {
+              if (!scheduleByLocation[schedule.title]) {
+              scheduleByLocation[schedule.title] = [];
+              }
+              scheduleByLocation[schedule.title].push(schedule);
+              }); %>
+              <% Object.keys(scheduleByLocation).forEach(title=> { %>
+                <h2>
+                  <%= title %>
+                </h2>
+                <ul>
+
+                  <% scheduleByLocation[title].forEach(schedule=> { %>
+                    <div class="inline-block <%if(((new Date().getUTCHours() + 7) + " :" + new Date().getUTCMinutes()>
+                      schedule.hours) && (today.toLocaleDateString('en-GB') ===
+                      schedule.date.toLocaleDateString('en-GB'))){%>
+                      pointer-events-none
                       <% }%>
-                        <% }); %>
-                      </div>
+                        ">
+                        <% if(session !=null) {%>
+                          <a href="/seat/<%= schedule.schedule_id %>"
+                            class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                            <%= schedule.hours %>
+                              <%= schedule.type %>
+                          </a>
+                          <% }else{ %>
+                            <a onclick="showPopup()"
+                              class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                              <%= schedule.hours %>
+                                <%= schedule.type %>
+                            </a>
+                            <% }%>
+                              <% }); %>
+                    </div>
 
-              </ul>
-              <% }); %>
-                <% } else { %>
-                  <p>No schedules available for this movie.</p>
-                  <% } %>
+                </ul>
+                <% }); %>
+                  <% } else { %>
+                    <p>No schedules available for this movie.</p>
                     <% } %>
-  </section>
+                      <% } %>
+    </section>
 
-  <div id="popup" class="popup">
-    <h2>This is a pop-up!</h2>
-    <p>Please login first to buy ticket</p>
-    <button onclick="hidePopup()"
-      class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
-  </div>
+    <div id="popup" class="popup">
+      <h2>This is a pop-up!</h2>
+      <p>Please login first to buy ticket</p>
+      <button onclick="hidePopup()"
+        class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
+    </div>
 
-  <script>
-    function hidePopup() {
-      var popup = document.getElementById("popup");
-      popup.style.display = "none";
-    }
-  </script>
+    <script>
+      function hidePopup() {
+        var popup = document.getElementById("popup");
+        popup.style.display = "none";
+      }
+    </script>
 </body>
 
 </html>
