--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -124,7 +124,7 @@
   const minutes = String(now.getUTCMinutes()).padStart(2, '0');
   
   const timeString = hours + ':' + minutes;
-  console.log(timeString);
+  console.log(today);
   
   
   %>
