--- a/views/admin-movies-edit.ejs
+++ b/views/admin-movies-edit.ejs
@@ -22,17 +22,17 @@
         class="w-full max-w-lg p-8 rounded-md custom-btn">
         <div class="flex flex-wrap mb-3 -mx-3">
           <div class="w-full px-3 mb-3">
-            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="title">Title</label>
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="name">Title</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="text" id="title" name="title" required>
+              type="text" id="name" name="name" placeholder="<%= movie.title %>">
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="genre">Genre</label>
             <div class="relative">
               <select
                 class="block w-full px-4 py-3 pr-8 leading-tight bg-white bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
-                id="genre" name="genre" required>
+                id="genre" name="genre">
                 <option value="Action">Action</option>
                 <option value="Adventure">Adventure</option>
                 <option value="Comedy">Comedy</option>
@@ -57,28 +57,28 @@
               for="duration">Duration</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="text" id="duration" name="duration" required>
+              type="text" id="duration" name="duration">
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="release_date">Release
               Date</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="text" id="release_date" name="release_date" required>
+              type="text" id="release_date" name="release_date">
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase"
               for="synopsis">Synopsis</label>
             <textarea
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              id="synopsis" name="synopsis" rows="4" cols="50" required></textarea>
+              id="synopsis" name="synopsis" rows="4" cols="50"></textarea>
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="status">Status</label>
             <div class="relative">
               <select
                 class="block w-full px-4 py-3 pr-8 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
-                id="status" name="status" required>
+                id="status" name="status">
                 <option value="UPCOMING">Upcoming</option>
                 <option value="SHOWING">Showing</option>
                 <option value="SHOWED">Showed</option>
@@ -94,20 +94,20 @@
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="rating">Rating</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="text" id="rating" name="rating" required>
+              type="text" id="rating" name="rating">
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="trailer_link">Trailer
               Link</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="text" id="trailer_link" name="trailer_link" required>
+              type="text" id="trailer_link" name="trailer_link">
           </div>
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="image">Image</label>
             <input
               class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
-              type="file" id="image" name="image" accept="image/*" required>
+              type="file" id="image" name="image" accept="image/*">
           </div>
           <div class="w-full px-3 py-4 text-right">
             <input
