--- a/views/admin-movies-edit.ejs
+++ b/views/admin-movies-edit.ejs
@@ -33,6 +33,7 @@
               <select
                 class="block w-full px-4 py-3 pr-8 leading-tight bg-white bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
                 id="genre" name="genre">
+                <option value="None">None</option>
                 <option value="Action">Action</option>
                 <option value="Adventure">Adventure</option>
                 <option value="Comedy">Comedy</option>
@@ -79,6 +80,7 @@
               <select
                 class="block w-full px-4 py-3 pr-8 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500"
                 id="status" name="status">
+                <option value="None">None</option>
                 <option value="UPCOMING">Upcoming</option>
                 <option value="SHOWING">Showing</option>
                 <option value="SHOWED">Showed</option>
