--- a/views/theaters.ejs
+++ b/views/theaters.ejs
@@ -70,7 +70,7 @@
             </div>
             <p class="text-base">
               <!-- Replace the text below with the description of the theater -->
-              This is a world class theater located at <%= theater.address %>.
+              <%= theater.address %>.
             </p>
           </div>
           <!-- Theater City -->
