--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Table Example</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -8,47 +9,75 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <div>
-    <a href="/admin/movies/add">Add New Item</a>
+
+<body class="bg-black font-raleway text-cfab7a">
+  <div class="absolute top-0 left-0 m-4 ">
+    <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
   </div>
-  <table>
-    <tr>
-      <th>Name</th>
-      <th>Genre</th>
-      <th>Druation</th>
-      <th>Release Date</th>
-      <th>Synopsis</th>
-      <th>Status</th>
-      <th>Trailer Link</th>
-      <th>Rating</th>
-      <th>Image</th>
-      <th>Actions</th>
-    </tr>
-    <% movies.forEach(function(movie) { %>
-      <tr>
-        <td><%= movie.title %></td>
-        <td><%= movie.genre %></td>
-        <td><%= movie.duration %></td>
-        <td><%= movie.release_date %></td>
-        <td><%= movie.synopsis %></td>
-        <td><%= movie.status %></td>
-        <td><%= movie.trailer_link %></td>
-        <td><%= movie.rating %></td>
-        <td>
-          <img src='/images/<%= movie.images %> ' width="100" height="150"> 
-        </td>
-        <td>
-          <a href="/admin/movies/edit/<%= movie.movie_id %>">Edit</button>
-
-          <form action="/delete-movie/<%= movie.movie_id %>" method="post">
-            <input type="submit" value="Delete">
-          </form>
-        </td>
-      </tr>
-    <% }); %>
-  </table>
-
-
+  <div class="p-4 text-right">
+    <a href="/admin/movies/add"
+      class="inline-block px-4 py-2 mb-4 text-white bg-blue-500 rounded-md hover:bg-blue-700">Add New Item</a>
+  </div>
+  <div class="flex justify-center">
+    <div class="relative w-full max-w-screen-xl overflow-x-auto overflow-y-auto rounded-lg shadow md:max-w-screen-2xl">
+      <table class="relative w-full whitespace-no-wrap border-2 border-white table-auto table-striped">
+        <thead>
+          <tr class="text-left">
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Name</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Genre</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Duration</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Release Date</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Synopsis</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Status</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Trailer Link</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Rating</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Image</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% movies.forEach(function(movie) { %>
+            <tr class="border-2 border-gray-200">
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <%= movie.title %>
+              </td>
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <%= movie.genre %>
+              </td>
+              <td class=" border-2 border-gray-200 px-3 py-2 min-w-[150px]">
+                <%= movie.duration %>
+              </td>
+              <td class=" border-2 border-gray-200 px-3 py-2 min-w-[150px]">
+                <%= movie.release_date %>
+              </td>
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <%= movie.synopsis %>
+              </td>
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <%= movie.status %>
+              </td>
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <%= movie.trailer_link %>
+              </td>
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <%= movie.rating %>
+              </td>
+              <td class="px-3 py-2 border-2 border-gray-200 ">
+                <img src='/images/<%= movie.images %> ' class="w-16 h-24">
+              </td>
+              <td class="flex items-center px-3 py-2 space-x-2 border-t border-gray-200 ">
+                <a href="/admin/movies/edit/<%= movie.movie_id %>"
+                  class="text-blue-500 underline hover:text-blue-700">Edit</a>
+                <form action="/delete-movie/<%= movie.movie_id %>" method="post" class="inline">
+                  <input type="submit" value="Delete" class="text-red-500 underline cursor-pointer hover:text-red-700">
+                </form>
+              </td>
+            </tr>
+            <% }); %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </body>
+
 </html>
