--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,24 +1,48 @@
 <!-- profile.ejs -->
 <!DOCTYPE html>
 <html>
+
 <head>
+  <meta charset="UTF-8">
   <title>User Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/fe_style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h1>User Profile</h1>
-  <p>Name: <%= user.username %></p>
-  <p>Email: <%= user.email %></p>
-  <!--Display Transactions History-->
-  <table>
-  <% purchases.forEach((purchase) => { %>
-    <tr>
-      <td><%= purchase.transaction_id %></td>
-      <td><%= purchase.user_id %></td>
-      <td><%= purchase.transaction_date %></td>
-      <td><%= purchase.transaction_status %></td>
-    </tr>
-  <% }); %>
-  </table>
-  <!-- Display other user information as needed -->
+
+<body class="leading-normal tracking-normal bg-black font-raleway text-cfab7a">
+  <div class="container p-5 mx-auto my-5">
+    <h1 class="mb-2 text-4xl font-bold">Profile</h1>
+    <div class="p-4 mb-6 border-2 border-white rounded shadow-md">
+      <p class="mb-2 text-xl"><strong><%= user.username %></strong> </p>
+      <p class="mb-2 text-xl"><%= user.email %></p>
+      <p class="mb-2 text-xl"><%= user.phone_number %></p>
+    </div>
+    <!--Display Transactions History-->
+    <h2 class="mb-2 text-2xl font-bold">Transaction History</h2>
+    <div class="p-6 border-2 border-white rounded shadow-md">
+      <table class="w-full table-auto">
+        <thead>
+          <tr>
+            <th class="px-4 py-2">Transaction ID</th>
+            <th class="px-4 py-2">User ID</th>
+            <th class="px-4 py-2">Transaction Date</th>
+            <th class="px-4 py-2">Transaction Status</th>
+          </tr>
+        </thead>
+        <tbody>
+        <% purchases.forEach((purchase) => { %>
+          <tr>
+            <td class="px-4 py-2 border"><%= purchase.transaction_id %></td>
+            <td class="px-4 py-2 border"><%= purchase.user_id %></td>
+            <td class="px-4 py-2 border"><%= purchase.transaction_date %></td>
+            <td class="px-4 py-2 border"><%= purchase.transaction_status %></td>
+          </tr>
+        <% }); %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
